--- a/src/app/features/contact/views/contact.component.html
+++ b/src/app/features/contact/views/contact.component.html
@@ -30,7 +30,7 @@
         <p class="m-0 mt-1">Lunes a Viernes 09:00 - 18:00</p>
       </div>
     </div>
-    <div class="col-9 p-5 shadow">
+    <div class="col-9 p-5 shadow" id="yellow-bg">
       <div class="row">
         <h3>Escríbenos</h3>
         <p>Tus comentarios son muy importantes para nosotros!</p>
@@ -65,7 +65,7 @@
           <textarea class="form-control" id="msjInput" rows="5"></textarea>
         </div>
         <div class="text-center mt-4">
-          <button type="submit" class="w-50">ENVIAR</button>
+          <button type="submit" class="w-50 shadow">ENVIAR</button>
         </div>
       </div>
     </div>
