--- a/src/app/features/home/components/hero/hero.component.css
+++ b/src/app/features/home/components/hero/hero.component.css
@@ -1,12 +1,13 @@
-/* div{
+div{
     border: 1px solid aquamarine;
-} */
+}
 #main-container{
     background-color: white;
+    height: 100%;
 }
 button{
     padding:5px 25px;
-    background-color: rgba(0, 168, 120, 1);
+    background-color: var(--purple);
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     color: white;
@@ -19,22 +20,22 @@ button:hover{
 }
 strong{
     letter-spacing: 2px;
-    color: rgba(0, 168, 120, 0.7);
+    color: var(--lightblue);
 }
 h1{
     font-weight: 600;
     letter-spacing: 1.5px;
     font-size: 3.4rem;
-    font-family: Helvetica, sans-serif;
-    color: rgba(14, 17, 22, 0.9);
+    font-family: Titulos;
+    color: var(--blue)
 }
 h5{
-    font-family: Helvetica, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     letter-spacing: 1px;
 }
 fa-icon{
     font-size: 3rem;
-    color: rgba(0, 168, 120, 0.4);;
+    color: var(--yellow);
 }
 
 .stock-search-component-small {
