--- a/src/app/features/home/components/hero/hero.component.html
+++ b/src/app/features/home/components/hero/hero.component.html
@@ -1,30 +1,25 @@
-<div
-  class="d-flex flex-column mt-5 p-4 justify-content-center text-center"
-  id="main-container"
->
-  <div>
-    <h1>
-      Encuentra a tu especialista de salud, <br /><strong
-        >fácil y rápido!</strong
-      >
-    </h1>
-  </div>
-  <div class="d-flex justify-content-center">
-    <div class="input-group mb-3 mt-5 w-50">
-      <input
-        type="search"
-        class="form-control shadow-sm p-3"
-        placeholder="Busca por nombre, ubicacion, especialidad, o lo que necesites."
-        aria-label="Example text with button addon"
-        aria-describedby="button-addon1"
-        [ngModel]="search"
-        (ngModelChange)="searchFunc($event)"
-      />
-
-      <button class="border shadow-sm" type="button" id="button-addon1">
-        Buscar
-      </button>
+<div class="container-fluid text-center" id="main-container">
+  <div class="row justify-content-center">
+    <div class="col-lg-9 col-sm-12 mt-5">
+      <h1>
+        Encuentra a tu especialista de salud, <br /><strong>fácil y rápido!</strong>
+      </h1>
     </div>
+  </div>
+  <div class="row justify-content-center">
+    <div class="col-lg-7 col-sm-10 text-center">
+      <div class="input-group mb-3 mt-5">
+        <input
+          type="search"
+          class="form-control shadow-sm p-3"
+          placeholder="Busca por nombre, ubicacion, especialidad, o lo que necesites."
+          aria-label="Example text with button addon"
+          aria-describedby="button-addon1"
+          [ngModel]="search"
+          (ngModelChange)="searchFunc($event)"/>
+        <button class="border shadow-sm" type="button" id="button-addon1">Buscar</button>
+      </div>
+    </div>  
   </div>
   <div class="d-flex justify-content-center stock-search-component-small">
     <div *ngIf="searchProfiles.length && show" class="stock-search-result">
@@ -38,10 +33,13 @@
       </div>
     </div>
   </div>
-
-  <h5 class="mt-5">o selecciona una categoria:</h5>
-  <fa-icon [icon]="arrowDown"></fa-icon>
-  <div class="mt-3">
-    <app-categories></app-categories>
-  </div>
+  <div class="row">
+    <h5 class="mt-5">o selecciona una categoria:</h5>
+    <fa-icon [icon]="arrowDown"></fa-icon>
+      <div class="col">
+      <div class=" mt-3">
+        <app-categories></app-categories>
+      </div>
+    </div>
+  </div>  
 </div>
