--- a/src/app/shared/components/doc-profile/doc-profile.component.html
+++ b/src/app/shared/components/doc-profile/doc-profile.component.html
@@ -20,7 +20,7 @@
             {{ profileData.second_lastname }}
           </h3>
         </div>
-        <div class="text-center mt-5">
+        <div class="text-center mt-5 border">
           <fa-icon
             class="mx-5"
             [icon]="linkedin"
