--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,19 +1,21 @@
 <div class="container-fluid border">
-    <div class="d-flex align-items-center justify-content-around">
-        <div>
-            <img src="assets/images/MEDX.png" class="img-fluid" alt="">
-        </div>
-        <div>
+    <div class="row">
+        <div class="d-flex align-items-center justify-content-around">
             <div>
-                <div class="icon-container text-center">
-                    <fa-icon class="me-3" [icon]="facebookIcon"></fa-icon>
-                    <fa-icon [icon]="instaIcon"></fa-icon>
-                    <fa-icon class="ms-3" [icon]="mailIcon"></fa-icon>
+                <img src="assets/images/medx light.png" class="img-fluid" alt="">
+            </div>
+            <div>
+                <div>
+                    <div class="icon-container text-center">
+                        <fa-icon class="me-3" [icon]="facebookIcon"></fa-icon>
+                        <fa-icon [icon]="instaIcon"></fa-icon>
+                        <fa-icon class="ms-3" [icon]="mailIcon"></fa-icon>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div>
-            <p class="p-0">politica de privacidad.</p>
+            <div>
+                <p class="p-0">politica de privacidad.</p>
+            </div>
         </div>
     </div>
 </div>
