--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,13 +1,17 @@
-<div class="container-fluid mt-2 shadow-sm p-2">
-  <div class="row align-items-center text-center">
-    <div class="col-4">
-      <img src="assets/images/MEDXwhite.png" alt="Logo" class="img-fluid" />
+<div class="container-fluid shadow-sm p-2 w-100">
+  <div class="row align-items-center justify-content-center text-center">
+    <div class="col-lg-4 col-sm-12 p-1 mx-3 my-3" id="image-container">
+      <img src="assets/images/medx (8).png" alt="Logo" class="img-fluid" />
     </div>
-    <div class="col-4">
-      <a routerLink="home" class="m-4 text-decoration-none">Home</a>
-      <a routerLink="about" class="m-4 text-decoration-none">About</a>
-      <a routerLink="contact" class="m-4 text-decoration-none">Contacto</a>
-    </div>
+    <div class="col-lg-8 col-sm-12">
+      <a routerLink="home" class="m-4 text-decoration-none py-2 px-4 rounded-1">Home</a>
+      <a routerLink="about" class="m-4 text-decoration-none py-2 px-4 rounded-1">About</a>
+      <a routerLink="contact" class="m-4 text-decoration-none py-2 px-4 rounded-1">Contacto</a>
+    </div>  
+  </div>
+</div>
+
+  <!-- <div class="col-4"></div> -->
     <!-- <div class="col-4" *ngIf="!state">
       <a routerLink="/register"
         ><button class="m-3 border no-border" id="register">
@@ -28,5 +32,3 @@
           Cerrar Sesión <fa-icon [icon]="logoutIcon"></fa-icon></button
       ></a>
     </div> -->
-  </div>
-</div>
