--- a/src/app/features/about/views/about.component.html
+++ b/src/app/features/about/views/about.component.html
@@ -7,38 +7,36 @@
     </nav>
 </div> -->
 
-<div class="container mb-5 rounded p-5" id="container">
-  <div class="row text-center">
-    <h1>Sobre MedX</h1>
+<div class="container mb-5 p-5" id="container">
+  <div class="row justify-content-center text-center">
+    <h1>SOBRE MEDX</h1>
     <h3>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero, dolorem?
+      Encuentra profesionales de salud de manera fácil y rápida con nuestra StartUp.
     </h3>
-    <div class="col-6 my-5 py-5 align-items-center">
+    <div class="col-lg-6 col-sm-12 my-5 text-center">
       <div class="img-container">
-        <img src="assets/images/pexels-mike-1178683.jpg" alt="" />
+        <img src="assets/images/poster.svg" alt="" class="rounded shadow" />
       </div>
     </div>
-    <div class="col-6 my-5 p-5">
+    <div class="col-lg-6 col-sm-12 my-5">
       <div>
-        <p align="justify">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam
-          perspiciatis, eius quibusdam amet blanditiis beatae accusantium,
-          perferendis laboriosam harum sunt alias neque esse ipsam
-          necessitatibus, pariatur saepe officiis quo reprehenderit consequatur.
-          Amet, repellendus voluptatem officia quas corrupti, cupiditate
-          temporibus deserunt eveniet ratione fugiat iste! Excepturi ex ipsam
-          quia? Voluptas, cupiditate ipsam. Recusandae voluptatum alias tempore
-          distinctio dolore amet nisi deserunt velit voluptatem asperiores est
-          quo, eum blanditiis accusamus exercitationem ea neque voluptatibus
-          saepe. Nemo ullam harum nisi dolorum, corrupti esse?
+        <p align="justify" class="lh-lg">
+          En la era digital actual, encontrar profesionales de salud competentes y confiables puede resultar un desafío
+          abrumador. Sin embargo, en la encantadora ciudad de Osorno, Chile, ha surgido una solución innovadora. Nuestra
+          startup se dedica a simplificar la búsqueda de profesionales de salud, brindando un acceso rápido y sencillo a
+          servicios médicos de calidad. Con nuestra plataforma, los usuarios pueden obtener atención médica adecuada sin
+          complicaciones ni demoras.
         </p>
-        <p align="justify">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam,
-          temporibus quisquam provident earum labore ipsum est incidunt
-          inventore unde iure rem adipisci? Porro error facilis neque soluta
-          deleniti commodi cum modi, quam quisquam fugiat provident
-          necessitatibus nulla facere harum sequi, veritatis nobis natus. Soluta
-          officiis ullam rem, temporibus consequuntur quis.
+        <p align="justify" class="lh-lg">          
+          <strong>¿Cómo funciona?</strong>
+          Nuestra plataforma funciona de manera sencilla. Los usuarios simplemente visitan nuestra aplicación web, donde podrán acceder a una amplia lista de profesionales de salud privados. Pueden filtrar los resultados según su especialidad médica, ubicación y previsión. Además, la plataforma proporciona información detallada sobre los perfiles de los profesionales, incluyendo su experiencia, certificaciones y opiniones de otros pacientes (pronto). Esto permite a los usuarios tomar decisiones informadas y encontrar al profesional adecuado que satisfaga sus necesidades.
+        </p>
+        <p align="justify" class="lh-lg">
+          Queremos que nuestra startup, con sede en Osorno, se convierta en una referencia en la búsqueda de
+          profesionales de salud. Nos enorgullece conectar a los pacientes con médicos, especialistas y otros
+          proveedores de servicios médicos de renombre en la zona.
+          Al utilizar tecnología de vanguardia y una interfaz amigable, hemos eliminado las barreras tradicionales y
+          hemos simplificado el proceso de encontrar atención médica de calidad.
         </p>
       </div>
     </div>
