--- a/src/app/features/category/components/filters/filters.component.css
+++ b/src/app/features/category/components/filters/filters.component.css
@@ -7,11 +7,10 @@ button{
     border: none;
     color: rgba(14, 17, 22, 0.8);
     font-weight: 500;
-    transition: color font-weight .2s;
+    transition: color .2s;
 }
 button:hover{
-    font-weight: 700;
-    color: rgba(0, 168, 120);
+    color: var(--purple);
 }
 .row{
     background-color: white;
@@ -33,10 +32,10 @@ button:hover{
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: rgba(0, 168, 120, 0.8); 
+    background: var(--purple); 
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: #555; 
+    background: var(--yellow); 
 }
