--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -4,9 +4,9 @@
       <img src="assets/images/medx (8).png" alt="Logo" class="img-fluid" />
     </div>
     <div class="col-lg-8 col-sm-12">
-      <a routerLink="home" class="m-4 text-decoration-none py-2 px-4 rounded-1">Home</a>
-      <a routerLink="about" class="m-4 text-decoration-none py-2 px-4 rounded-1">About</a>
-      <a routerLink="contact" class="m-4 text-decoration-none py-2 px-4 rounded-1">Contacto</a>
+      <a routerLink="home" class="m-4 py-2 px-4">Home</a>
+      <a routerLink="about" class="m-4 py-2 px-4">About</a>
+      <a routerLink="contact" class="m-4 py-2 px-4">Contacto</a>
     </div>  
   </div>
 </div>
