--- a/src/app/features/about/views/about.component.css
+++ b/src/app/features/about/views/about.component.css
@@ -3,18 +3,28 @@
 } */
 .img-container{
     width: auto;
-    height: 300px;
+    height: auto;
+    margin: 0px;
 }
 .img-container img{
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
+    border: none;
 }
 h1{
     font-family: Helvetica;
-    font-size: 2.5rem;
+    font-size: 2rem;
     letter-spacing: 2px;
 }
 h3{
     color: rgba(14, 17, 22, 0.6);
+    font-family: Titulos;
+}
+p{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    letter-spacing: 1px;
+}
+strong{
+    color: var(--purple);
 }
