--- a/src/app/features/contact/views/contact.component.html
+++ b/src/app/features/contact/views/contact.component.html
@@ -7,12 +7,12 @@
     </nav>
 </div> -->
 
-<div class="container mb-5 rounded p-5" id="container">
+<div class="container-fluid mb-5 rounded p-5" id="container">
   <div class="row text-center">
     <h1>Contactanos</h1>
   </div>
   <div class="row p-5">
-    <div class="col-3 p-3">
+    <div class="col-lg-3 col-sm-10 p-3">
       <h4 class="mt-4">
         Información <br />
         de Contacto
@@ -30,11 +30,11 @@
         <p class="m-0 mt-1">Lunes a Viernes 09:00 - 18:00</p>
       </div>
     </div>
-    <div class="col-9 p-5 shadow" id="yellow-bg">
+    <div class="col-lg-9 col-sm-12 p-5 shadow" id="yellow-bg">
       <div class="row">
         <h3>Escríbenos</h3>
-        <p>Tus comentarios son muy importantes para nosotros!</p>
-        <div class="col-6 p-3">
+        <p id="subtitle">Tus comentarios son muy importantes para nosotros!</p>
+        <div class="col-lg-6 col-sm-12 p-3">
           <form>
             <div class="mb-3">
               <label for="nameInput" class="form-label">Nombre</label>
@@ -46,7 +46,7 @@
             </div>
           </form>
         </div>
-        <div class="col-6 p-3">
+        <div class="col-lg-6 col-sm-12 p-3">
           <form>
             <div class="mb-3">
               <label for="lastNameInput" class="form-label">Apellido</label>
