--- a/src/app/features/home/components/hero/categories/categories.component.css
+++ b/src/app/features/home/components/hero/categories/categories.component.css
@@ -3,12 +3,13 @@
 } */
 fa-icon{
     font-size: 40px;
-    color: var(--lightblue);
+    color: var(--blue);
 }
 p{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: var(--purple);
-    font-size: 1rem;
+    font-family: Titulos;
+    color: var(--blue);
+    font-size: 1.2rem;
+    letter-spacing: 1px;
 }
 a, 
 #icon-container, 
@@ -16,7 +17,15 @@ fa-icon{
     letter-spacing: 1px;
     text-decoration: none;
 }
-
+#icon-container{
+    border: 3px inset var(--purpleO);
+    background-color: white;
+    transition: background-color .5s;
+    border-radius: 10px;
+}
+#icon-container:hover{
+    background-color: var(--purpleO);
+}
 .hiperlink {
     cursor: pointer;
 }
