--- a/src/app/features/home/components/hero/categories/categories.component.html
+++ b/src/app/features/home/components/hero/categories/categories.component.html
@@ -1,7 +1,7 @@
 <div class="container text-center">
   <div class="row">
     <div
-      class="col-lg-2 col-md-3 border p-2 shadow-sm hiperlink"
+      class="col-lg-2 col-md-3 p-2 shadow-sm hiperlink"
       *ngFor="let category of categories"
       id="icon-container"
       [routerLink]="category.path"
