--- a/src/app/features/home/components/hero/hero.component.html
+++ b/src/app/features/home/components/hero/hero.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid text-center" id="main-container">
+<div class="d-flex flex-column mt-5 p-4 justify-content-center text-center" id="main-container">
   <div class="row justify-content-center">
     <div class="col-lg-9 col-sm-12 mt-5">
       <h1>
