--- a/src/app/shared/components/doc-profile/doc-profile.component.html
+++ b/src/app/shared/components/doc-profile/doc-profile.component.html
@@ -7,12 +7,12 @@
     degreeData !== undefined
   "
 >
-  <div class="row">
-    <div class="col-4 p-3">
+  <div class="row justify-content-center">
+    <div class="col-lg-4 col-sm-8 p-3">
       <div class="image-container">
         <img class="image-fluid" [src]="profileData.profile_photo" alt="" />
       </div>
-      <div>
+      <div class="row justify-content-center">
         <div class="mt-3">
           <h5>{{ degreeData.name }}</h5>
           <h3>
@@ -20,24 +20,39 @@
             {{ profileData.second_lastname }}
           </h3>
         </div>
-        <div class="text-center mt-5 border">
-          <fa-icon
-            class="mx-5"
-            [icon]="linkedin"
-            id="picture-icon"
-            (click)="redirectSocial(profileData.linkedin)"
-          ></fa-icon>
-          <fa-icon
-            class="mx-5"
-            [icon]="instagram"
-            id="picture-icon"
-            (click)="redirectSocial(profileData.instagram)"
-          ></fa-icon>
-        </div>
-      </div>
+        <div class="row justify-content-center">
+          <div class="col-4 p-0 text-center">
+          <!--Boton compatir-->
+            <button type="button" class="w-100 my-2" id="share-btn">
+              <fa-icon [icon]="share" id="whatsapp-btn"></fa-icon>
+            </button>            
+          <!--Fin-->
+          </div>
+          <div class="col-4 p-0 text-center">
+            <button type="button" class="w-100 my-2" id="linkedin-btn">
+              <fa-icon
+                class="shadow-sm"
+                [icon]="linkedin"
+                id="linkedin-icon"
+                (click)="redirectSocial(profileData.linkedin)"
+              ></fa-icon>
+            </button>
+          </div>
+          <div class="col-4 p-0 text-center">
+            <button type="button" class="w-100 my-2" id="instagram-btn">
+              <fa-icon
+              class="shadow-sm"
+              [icon]="instagram"
+              id="instagram-icon"
+              (click)="redirectSocial(profileData.instagram)"
+              ></fa-icon>
+            </button>
+          </div> 
+        </div> 
+      </div>                                               
     </div>
 
-    <div class="col-8">
+    <div class="col-lg-8 col-sm-12">
       <div class="accordion p-3" id="accordionExample">
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingOne">
@@ -67,7 +82,7 @@
                 </div>
               </div>
               <div class="row mt-3">
-                <div class="col-6 p-2 mb-4">
+                <div class="col-lg-6 col-sm-12 p-2 mb-4">
                   <div class="d-flex align-items-center mb-2">
                     <fa-icon class="ps-3" [icon]="location"></fa-icon>
                     <p class="ps-3 mb-0">
@@ -185,7 +200,7 @@
             class="accordion-collapse collapse"
             aria-labelledby="headingThree"
           >
-            <div class="accordion-body">
+            <div class="accordion-body" align="justify" id="info-text">
               {{ profileData.short_resume }}
             </div>
           </div>
