--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid border">
+<div class="container-fluid border mt-5 mb-0">
     <div class="row">
         <div class="d-flex align-items-center justify-content-around">
             <div>
