--- a/src/app/features/profile/views/profile.component.html
+++ b/src/app/features/profile/views/profile.component.html
@@ -1,4 +1,4 @@
-<div class="container mb-5 rounded p-5" id="container" *ngIf="!profileExist">
+<!-- <div class="container mb-5 rounded p-5" id="container" *ngIf="!profileExist">
   <div class="row text-center">
     <h1>Bienvenido a MEDX!</h1>
     <h3>
@@ -6,11 +6,11 @@
       formulario
     </h3>
   </div>
-</div>
+</div> -->
 
 <!-- <div class="container mb-5 rounded p-5" id="container" *ngIf="profileExist">
   <div class="row text-center">
     <h1>Bienvenido a MEDX!</h1>
   </div>
 </div> -->
-<app-doc-profile [userId]="userId" *ngIf="userId"></app-doc-profile>
+<app-doc-profile [userId]="userId"></app-doc-profile>
