--- a/src/app/features/home/components/hero/hero.component.html
+++ b/src/app/features/home/components/hero/hero.component.html
@@ -1,8 +1,13 @@
-<div class="d-flex flex-column mt-5 p-4 justify-content-center text-center" id="main-container">
+<div
+  class="d-flex flex-column mt-5 p-4 justify-content-center text-center"
+  id="main-container"
+>
   <div class="row justify-content-center">
     <div class="col-lg-9 col-sm-12 mt-5">
       <h1>
-        Encuentra a tu especialista de salud, <br /><strong>fácil y rápido!</strong>
+        Encuentra a tu especialista de salud, <br /><strong
+          >fácil y rápido!</strong
+        >
       </h1>
     </div>
   </div>
@@ -12,14 +17,17 @@
         <input
           type="search"
           class="form-control shadow-sm p-3"
-          placeholder="Busca por nombre, ubicacion, especialidad, o lo que necesites."
+          placeholder="Busca por nombre"
           aria-label="Example text with button addon"
           aria-describedby="button-addon1"
           [ngModel]="search"
-          (ngModelChange)="searchFunc($event)"/>
-        <button class="border shadow-sm" type="button" id="button-addon1">Buscar</button>
+          (ngModelChange)="searchFunc($event)"
+        />
+        <button class="border shadow-sm" type="button" id="button-addon1">
+          Buscar
+        </button>
       </div>
-    </div>  
+    </div>
   </div>
   <div class="d-flex justify-content-center stock-search-component-small">
     <div *ngIf="searchProfiles.length && show" class="stock-search-result">
@@ -36,10 +44,10 @@
   <div class="row">
     <h5 class="mt-5">o selecciona una categoria:</h5>
     <fa-icon [icon]="arrowDown"></fa-icon>
-      <div class="col">
-      <div class=" mt-3">
+    <div class="col">
+      <div class="mt-3">
         <app-categories></app-categories>
       </div>
     </div>
-  </div>  
+  </div>
 </div>
