--- a/src/app/features/home/components/hero/hero.component.html
+++ b/src/app/features/home/components/hero/hero.component.html
@@ -17,7 +17,7 @@
         <input
           type="search"
           class="form-control shadow-sm p-3"
-          placeholder="Busca por nombre"
+          placeholder="Ingresa el nombre de quien buscas..."
           aria-label="Example text with button addon"
           aria-describedby="button-addon1"
           [ngModel]="search"
