--- a/src/app/features/home/components/hero/hero.component.html
+++ b/src/app/features/home/components/hero/hero.component.html
@@ -5,7 +5,7 @@
   <div class="row justify-content-center">
     <div class="col-lg-9 col-sm-12 mt-5">
       <h1>
-        Encuentra a tu especialista de salud, <br /><strong
+        Encuentra a tu especialista de salud, <br /><strong id="text"
           >fácil y rápido!</strong
         >
       </h1>
