--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -4,7 +4,7 @@
             <img src="assets/images/medx (8).png" alt="Logo">
         </div>
         <div id="icon-container" class="align-self-center justify-content-evenly">
-            <a href="#"><fa-icon [icon]="instaIcon"></fa-icon></a>
+            <a href="https://www.instagram.com/medxapp_cl/"><fa-icon [icon]="instaIcon"></fa-icon></a>
             <a href="#"><fa-icon [icon]="mailIcon"></fa-icon></a>
         </div>
     </div>
