--- a/src/app/features/category/components/filters-display/filters-display.component.html
+++ b/src/app/features/category/components/filters-display/filters-display.component.html
@@ -1,4 +1,7 @@
-<div class="container rounded">
+<div
+  class="container rounded"
+  *ngIf="profileData.length > 0; else sinResultados"
+>
   <div class="m-1 text-center p-2">
     <h5 class="pt-2">RESULTADOS:</h5>
   </div>
@@ -28,3 +31,9 @@
     </nav>
   </div> -->
 </div>
+
+<ng-template #sinResultados>
+  <div class="m-1 text-center p-2">
+    <h5 class="pt-2">0 RESULTADOS:</h5>
+  </div></ng-template
+>
